# skills-mcp

./: AGENTS.md  Cargo.toml  Dockerfile  Justfile  README.md  SECURITY_AUDIT.md
src/: db.rs  error.rs  lib.rs  main.rs  params.rs  repo.rs  server.rs  service.rs  tools.rs  transport.rs
src/operations/: create_skill.rs  delete_skill.rs  get_skill.rs  list_skills.rs  mod.rs  search_skills.rs  update_skill.rs
tests/: dispatch_text_characterization.rs  server_config.rs  tool_descriptions.rs
