[package]
name = "skills-mcp"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
mcp-core = { git = "https://github.com/adelie-ai/mcp-core" }
clap = { version = "4.5.54", features = ["derive", "env"] }
dirs = "6"
schemars = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
shellexpand = "3.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
walkdir = "2"

[lints.rust]
warnings = "deny"

[lints.clippy]
all = "deny"
